// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`分析 > 常规 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 1,
    "type": "l",
    "words": "觉",
  },
  {
    "code": "b",
    "index": 2,
    "type": "e",
    "words": "b",
  },
  {
    "code": "_",
    "index": 3,
    "type": "u",
    "words": " ",
  },
  {
    "code": "bbb",
    "index": 4,
    "type": "e",
    "words": "bbb",
  },
  {
    "index": 7,
    "type": "c",
    "value": {
      "code": "d",
      "collision": 1,
      "line": 4,
      "prefixeeLen": 2,
    },
    "words": "睡觉",
  },
  {
    "code": "24",
    "index": 9,
    "type": "u",
    "words": "24",
  },
  {
    "code": ",",
    "index": 11,
    "type": "e",
    "words": ",",
  },
]
`;

exports[`分析 > 常规 2`] = `
{
  "CL": 4,
  "CLDist": [
    0,
    2,
  ],
  "Eq": 6.8,
  "LL": 3,
  "LR": 2,
  "RL": 0,
  "RR": 0,
  "collision": 0,
  "collisionChar": 0,
  "collisionDist": [
    2,
  ],
  "comb": 5,
  "commit": 2,
  "double": 2,
  "fingers": [
    5,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    3,
  ],
  "hanzi": 3,
  "keys": 12,
  "keysDist": {
    ",": 1,
    "2": 1,
    "4": 1,
    "_": 3,
    "a": 1,
    "b": 4,
    "d": 1,
  },
  "lack": 1,
  "lackSet": Set {
    "觉",
  },
  "littleFingerDisturb": 0,
  "longFingerDisturb": 0,
  "multiSpan": 0,
  "sameFingers": 2,
  "singleSpan": 0,
  "trible": 1,
  "words": 1,
  "wordsChar": 2,
  "wordsDist": [
    1,
    1,
  ],
}
`;

exports[`贪婪分词 > 只有汉字 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 1,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 2,
    "type": "l",
    "words": "的",
  },
  {
    "index": 3,
    "type": "c",
    "value": {
      "code": "d",
      "collision": 1,
      "line": 4,
      "prefixeeLen": 2,
    },
    "words": "睡觉",
  },
]
`;

exports[`贪婪分词 > 含有大写字母 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "C",
      "collision": 1,
      "line": 3,
      "prefixeeLen": 4,
    },
    "words": "好好睡觉",
  },
  {
    "code": "↑1",
    "index": 4,
    "type": "p",
    "words": "！",
  },
]
`;

exports[`贪婪分词 > 含有标点 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 1,
    "type": "l",
    "words": "的",
  },
  {
    "code": "↑1",
    "index": 2,
    "type": "p",
    "words": "！",
  },
]
`;

exports[`贪婪分词 > 含有空格 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "code": "__",
    "index": 1,
    "type": "u",
    "words": "  ",
  },
  {
    "index": 3,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "code": "__",
    "index": 4,
    "type": "u",
    "words": "  ",
  },
]
`;

exports[`贪婪分词 > 含有英文 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 1,
    "type": "c",
    "value": {
      "code": "e",
      "collision": 1,
      "line": 5,
      "prefixeeLen": 2,
    },
    "words": "xo",
  },
  {
    "index": 3,
    "type": "l",
    "words": "觉",
  },
  {
    "code": "bbbb",
    "index": 4,
    "type": "e",
    "words": "bbbb",
  },
]
`;

exports[`贪婪分词生成器 > 只有汉字 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 1,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 2,
    "type": "l",
    "words": "的",
  },
  {
    "index": 3,
    "type": "c",
    "value": {
      "code": "d",
      "collision": 1,
      "line": 4,
      "prefixeeLen": 2,
    },
    "words": "睡觉",
  },
]
`;

exports[`贪婪分词生成器 > 含有标点 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 1,
    "type": "l",
    "words": "的",
  },
  {
    "code": "↑1",
    "index": 2,
    "type": "p",
    "words": "！",
  },
]
`;

exports[`贪婪分词生成器 > 含有空格 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "code": "__",
    "index": 1,
    "type": "u",
    "words": "  ",
  },
  {
    "index": 3,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "code": "__",
    "index": 4,
    "type": "u",
    "words": "  ",
  },
]
`;

exports[`贪婪分词生成器 > 含有英文 1`] = `
[
  {
    "index": 0,
    "type": "c",
    "value": {
      "code": "a",
      "collision": 1,
      "line": 1,
      "prefixeeLen": 4,
    },
    "words": "好",
  },
  {
    "index": 1,
    "type": "c",
    "value": {
      "code": "e",
      "collision": 1,
      "line": 5,
      "prefixeeLen": 2,
    },
    "words": "xo",
  },
  {
    "index": 3,
    "type": "l",
    "words": "觉",
  },
  {
    "code": "bbbb",
    "index": 4,
    "type": "e",
    "words": "bbbb",
  },
]
`;
